force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Transaction_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Transaction_Status_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Status Check</label>
    <type>Checkbox</type>
</CustomField>