force-app/main/default/objects/CLQ_Role__c/fields/CLQ_Update_Role__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Update_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Role</label>
    <type>Checkbox</type>
</CustomField>