force-app/main/default/objects/CLQ_Role__c/fields/CLQ_X1_License_No__c.field-meta.xml
<CustomField>
    <fullName>CLQ_X1_License_No__c</fullName>
    <description>[04/20/2017] : Changed the data type to text</description>
    <label>1. License No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>