force-app/main/default/objects/CLQ_Role__c/fields/CLQ_X2_License_No__c.field-meta.xml
<CustomField>
    <fullName>CLQ_X2_License_No__c</fullName>
    <description>[4/20/17] - Changed datatype to Text</description>
    <label>2. License No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>