force-app/main/default/objects/CLQ_Role__c/fields/CLQ_X2_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_X2_Program_Number__c</fullName>
    <inlineHelpText>If you own/owned more than one program, list the most recently licensed.</inlineHelpText>
    <label>2. Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>