force-app/main/default/objects/CLQ_Role__c/fields/CLQ_X3_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>CLQ_X3_Program_Number__c</fullName>
    <label>3. Program Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>