force-app/main/default/objects/CLQ_Role__c/fields/CLQ_XExisting_Role__c.field-meta.xml
<CustomField>
    <fullName>CLQ_XExisting_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Makes this value true when copied from Program to PT</description>
    <label>XExisting Role</label>
    <type>Checkbox</type>
</CustomField>