force-app/main/default/objects/CLQ_Role__c/fields/Contact_Email_Drawloop__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Drawloop__c</fullName>
    <description>Forms &amp; Reports: Created to store contact&apos;s email as Text and to use in excel as middleware to send F&amp;R emails</description>
    <formula>CLQ_Contact__r.Email</formula>
    <label>Contact Email (Drawloop)</label>
    <type>Text</type>
</CustomField>