force-app/main/default/objects/CLQ_Role__c/fields/Individual_an_Admin_at_other_locations__c.field-meta.xml
<CustomField>
    <fullName>Individual_an_Admin_at_other_locations__c</fullName>
    <label>Individual an Admin at other locations?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>