force-app/main/default/objects/CLQ_Role__c/fields/Licensing_Reviewer_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Reviewer_Manager_Email__c</fullName>
    <formula>CLQ_Program__r.CLQ_Licensing_Specialist__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensing Reviewer Manager Email</label>
    <type>Text</type>
</CustomField>