force-app/main/default/objects/CLQ_Role__c/fields/ODE_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>ODE_Role_Type__c</fullName>
    <label>ODE Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Role</fullName>
            </value>
            <value>
                <fullName>Org Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>