force-app/main/default/objects/CLQ_Role__c/fields/Portal_Roles__c.field-meta.xml
<CustomField>
    <fullName>Portal_Roles__c</fullName>
    <label>Portal Roles</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCLQSOwner</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
                <label>Level 4</label>
            </value>
            <value>
                <fullName>Director</fullName>
                <label>Level 3</label>
            </value>
            <value>
                <fullName>Licensing Admin</fullName>
                <label>Level 2</label>
            </value>
            <value>
                <fullName>SUTQ Consultant</fullName>
                <label>Level 1</label>
            </value>
            <value>
                <fullName>OCLQSSUTQ</fullName>
            </value>
            <value>
                <fullName>OCLQSLicensing</fullName>
            </value>
            <value>
                <fullName>OCLQSAdministrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>