force-app/main/default/objects/CLQ_Role__c/fields/Portal_Sharing_Counter__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sharing_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Portal Sharing Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>