force-app/main/default/objects/CLQ_Role__c/fields/Program_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Email__c</fullName>
    <formula>CLQ_Program__r.CLQ_Program_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Email</label>
    <type>Text</type>
</CustomField>