force-app/main/default/objects/CLQ_Role__c/fields/PT_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>PT_Submitter_Email__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_Submitter__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Submitter Email</label>
    <type>Text</type>
</CustomField>