force-app/main/default/objects/CLQ_Role__c/fields/PT_Transaction_AssignedTo_Email__c.field-meta.xml
<CustomField>
    <fullName>PT_Transaction_AssignedTo_Email__c</fullName>
    <formula>CLQ_Program_Transaction_Source__r.CLQ_Transaction_Assigned_To__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Transaction AssignedTo Email</label>
    <type>Text</type>
</CustomField>