force-app/main/default/objects/CLQ_Role__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Not related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>