force-app/main/default/objects/CLQ_Role__c/fields/Secondary_Role__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Role__c</fullName>
    <label>Secondary Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Role_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCLQSPS</fullName>
            </value>
            <value>
                <fullName>OCLQSSACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>