force-app/main/default/objects/CLQ_Role__c/recordTypes/CLQ_Administrator.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Administrator</fullName>
    <active>true</active>
    <label>Administrator</label>
</RecordType>