force-app/main/default/objects/CLQ_Role__c/recordTypes/CLQ_Organization_Role.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Organization_Role</fullName>
    <active>true</active>
    <description>Role associated to an organization</description>
    <label>Organization Role</label>
</RecordType>