force-app/main/default/objects/CLQ_Role__c/recordTypes/CLQ_Resident.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Resident</fullName>
    <active>true</active>
    <label>Resident</label>
</RecordType>