force-app/main/default/objects/CLQ_Role__c/recordTypes/Portal_Roles.recordType-meta.xml
<RecordType>
    <fullName>Portal_Roles</fullName>
    <active>true</active>
    <description>This record type is used to create Portal Roles</description>
    <label>Portal Roles</label>
</RecordType>