force-app/main/default/objects/CLQ_Role__c/recordTypes/Program_Role.recordType-meta.xml
<RecordType>
    <fullName>Program_Role</fullName>
    <active>true</active>
    <description>Role associated to a Program</description>
    <label>Program Role</label>
</RecordType>