force-app/main/default/objects/CLQ_Role__c/validationRules/CLQ_BCI_Prohibition_Rehabilitation.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_BCI_Prohibition_Rehabilitation</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND(ISPICKVAL(CLQ_Criminal_Record_BCI__c,&apos;Yes&apos;),
OR(AND(NOT(ISPICKVAL( CLQ_Prohibition_BCI__c ,&apos;Yes&apos;)),
NOT(ISPICKVAL( CLQ_Prohibition_BCI__c ,&apos;No&apos;))),
AND(NOT(ISPICKVAL( CLQ_Rehabilitation_Verified_BCI__c ,&apos;No&apos;)),
NOT(ISPICKVAL( CLQ_Rehabilitation_Verified_BCI__c ,&apos;Yes&apos;)))))</errorConditionFormula>
    <errorMessage>Select BCI Prohibition and Rehabilitation.</errorMessage>
</ValidationRule>