force-app/main/default/objects/CLQ_Role__c/validationRules/CLQ_Reason_Code_is_Required_for_Admin.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Reason_Code_is_Required_for_Admin</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( ISPICKVAL(CLQ_Role__c  , &quot;Administrator&quot;), ISBLANK(TEXT( CLQ_Reason_Codes__c ))  )</errorConditionFormula>
    <errorDisplayField>CLQ_Reason_Codes__c</errorDisplayField>
    <errorMessage>Please select reason code</errorMessage>
</ValidationRule>