force-app/main/default/objects/CLQ_Role__c/validationRules/CLQ_Specific_Other_Deny_Reasons.validationRule-meta.xml
<ValidationRule>
    <fullName>CLQ_Specific_Other_Deny_Reasons</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND( ISPICKVAL(  CLQ_Denial_Reason__c  , &apos;Other&apos;) , ISBLANK(  CLQ_Other_Deny_Reason__c  ) )</errorConditionFormula>
    <errorDisplayField>CLQ_Other_Deny_Reason__c</errorDisplayField>
    <errorMessage>&apos;Specify other deny reasons&apos; if &apos;Deny Reasons&apos; is &apos;Other&apos;</errorMessage>
</ValidationRule>