force-app/main/default/objects/CLQ_Role__c/listViews/Background_Check_Queue_CLQ_Role.listView-meta.xml
<ListView>
    <fullName>Background_Check_Queue_CLQ_Role</fullName>
    <filterScope>Queue</filterScope>
    <label>Background Check Queue</label>
    <queue>Background_Check_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>